[gd_scene load_steps=10 format=3 uid="uid://bi7lxcglf2tnc"]

[ext_resource type="Script" path="res://addons/silent_wolf/Auth/Login.gd" id="1"]
[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_l6lc2"]
[ext_resource type="PackedScene" uid="uid://clllbf6am8qdf" path="res://addons/silent_wolf/common/SWButton.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://bpn62aabunxva" path="res://addons/silent_wolf/assets/gfx/checkbox_checked.png" id="4_ak74a"]
[ext_resource type="Texture2D" uid="uid://bgs8a50ilk5cj" path="res://addons/silent_wolf/assets/gfx/checkbox_unchecked.png" id="5_3asm1"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="6_jpxma"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxxi6"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qt8ss"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o52ik"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="Login" type="TextureRect"]
anchors_preset = -1
anchor_right = 0.989
anchor_bottom = 0.984
offset_right = -1898.88
offset_bottom = -1062.72
mouse_filter = 2
theme = ExtResource("1_l6lc2")
script = ExtResource("1")

[node name="BackButton" parent="." instance=ExtResource("2")]
process_priority = 1
custom_minimum_size = Vector2(500, 100)
layout_mode = 0
offset_left = 32.0
offset_top = 32.0
offset_right = 292.0
offset_bottom = 123.0
focus_mode = 1
theme_override_font_sizes/font_size = 48
text = "‚Üê Play without
online leaderboards"

[node name="register_button" parent="." instance=ExtResource("2")]
process_priority = 1
custom_minimum_size = Vector2(275, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1563.0
offset_top = 32.0
offset_right = 1888.0
offset_bottom = 132.0
grow_horizontal = 0
focus_mode = 1
text = "Register
"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
offset_top = 124.0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2

[node name="FormContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="CenterContainer/FormContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 16
theme_override_font_sizes/font_size = 72
text = "Log in"
horizontal_alignment = 1

[node name="UsernameContainer" type="HBoxContainer" parent="CenterContainer/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/FormContainer/UsernameContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Username:"
vertical_alignment = 1

[node name="Username" type="LineEdit" parent="CenterContainer/FormContainer/UsernameContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../BackButton")
focus_neighbor_bottom = NodePath("../../PasswordContainer/Password")
theme_override_font_sizes/font_size = 48
max_length = 30

[node name="PasswordContainer" type="HBoxContainer" parent="CenterContainer/FormContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/FormContainer/PasswordContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Password:"
vertical_alignment = 1

[node name="Password" type="LineEdit" parent="CenterContainer/FormContainer/PasswordContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../UsernameContainer/Username")
focus_neighbor_bottom = NodePath("../../RememberMeCheckBox")
focus_next = NodePath("../../RememberMeCheckBox")
theme_override_font_sizes/font_size = 48
max_length = 30
secret = true

[node name="RememberMeCheckBox" type="CheckBox" parent="CenterContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../PasswordContainer/Password")
focus_neighbor_bottom = NodePath("../LinkButton")
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
theme_override_icons/checked = ExtResource("4_ak74a")
theme_override_icons/unchecked = ExtResource("5_3asm1")
theme_override_styles/normal = SubResource("StyleBoxFlat_oxxi6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qt8ss")
theme_override_styles/hover = SubResource("StyleBoxFlat_o52ik")
text = "Stay signed in for 30 days"
expand_icon = true

[node name="LinkButton" type="LinkButton" parent="CenterContainer/FormContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../RememberMeCheckBox")
focus_neighbor_bottom = NodePath("../LoginButton")
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "Forgot Password?"

[node name="ErrorMessage" type="Label" parent="CenterContainer/FormContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme_override_colors/font_color = Color(0.92549, 0, 0, 1)
theme_override_font_sizes/font_size = 32
autowrap_mode = 3

[node name="LoginButton" parent="CenterContainer/FormContainer" instance=ExtResource("2")]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="CenterContainer/FormContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Processing..."
horizontal_alignment = 1

[node name="transition" parent="." instance=ExtResource("6_jpxma")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="register_button" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="CenterContainer/FormContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="CenterContainer/FormContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
